[package]
name = "re_space_view_waveform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
re_query = { version = "0.17" }
re_sdk = { version = "0.17" }
re_data_store = "0.17"
re_format = "0.17"
re_log = "0.17"
re_log_types = "0.17"
re_renderer = "0.17"
re_space_view = "0.17"
re_tracing = "0.17"
re_types = { version = "0.17", features = ["egui_plot"] }
re_ui = "0.17"
re_viewer_context = "0.17"

egui = { version = "0.28.1", features = [
    "callstack",
    "log",
    "puffin",
    "rayon",
] }
egui_plot = "0.28.1"
egui_extras = "0.28.1"
itertools = "0.13"
once_cell = "1.19.0"

[dev-dependencies]
re_crash_handler = { version = "0.17" }
re_viewer = { version = "0.17", default-features = false }
re_smart_channel = "0.17"
rand = "0.8.5"

# We need re_sdk_comms to receive log events from and SDK:
#re_smart_channel = "0.17"
# mimalloc is a much faster allocator:
mimalloc = "0.1"
